--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -38,7 +38,7 @@ html(lang="en")
 				.about__container
 					.about__inner
 						h2.heading Quantum #[span.heading-line Team]
-						p Медиабаинговая команда с выдающимися показателями, динамичным ростом, мощным финансовым потоком и большой группой экспертов в iGaming.
+						p Медиабаинговая команда с выдающимися показателями, динамичным ростом, мощным финансовым потоком и большой группой экспертов в CPA маркетинге.
 						a.about__button.button.button--primary(href="#form") Стать частью команды
 			section#advantages.advantages
 				.advantages__container
@@ -48,13 +48,13 @@ html(lang="en")
 						ul.advantages__list
 							li
 								img(src="img/advantages/advantages-1.svg", alt="#", aria-hidden="true", width="60", height="58", loading="lazy")
-								| Работаем с топовыми вертикалями: гемблинг, беттинг, нутра
+								| Работаем с топовыми вертикалями: gambling, betting, nutra
 							li
 								img(src="img/advantages/advantages-2.svg", alt="#", aria-hidden="true", width="61", height="62", loading="lazy")
 								| Используем самые эффективные источники трафика: Facebook и Google
 							li
 								img(src="img/advantages/advantages-3.svg", alt="#", aria-hidden="true", width="64", height="56", loading="lazy")
-								| Больше 10 лет успешной работы и внедрения уникальных функций, качественного контента и продвижения
+								| Больше 5 лет успешной работы и внедрения уникальных функций, качественного контента и продвижения
 							li
 								img(src="img/advantages/advantages-4.svg", alt="#", aria-hidden="true", width="60", height="65", loading="lazy")
 								| Автоматизированы рутинные процессы, настроены готовые схемы, поэтому мы так быстро растём в трафик-объёме и прибыли
@@ -74,7 +74,7 @@ html(lang="en")
 								h3.work__title
 									img(src="./img/work/work-1.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
 									span Фарм-отдел
-								p Большой отдел профессионалов с уверенной экспертизой и аналитикой, которые удовлетворят все потребности по аккаунтам. Тщательно подготавливаем сетапы из аккаунтов «Фейсбука» для запуска, тестируем и выявляем рабочие.
+								p Большой отдел профессионалов с уверенной экспертизой и аналитикой, которые удовлетворят все потребности по аккаунтам. Тщательно подготавливаем сетапы из аккаунтов «Facebook» для запуска, тестируем и выявляем рабочие.
 							li
 								h3.work__title
 									img(src="./img/work/work-2.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
@@ -84,20 +84,20 @@ html(lang="en")
 								h3.work__title
 									img(src="./img/work/work-3.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
 									span Креативный отдел
-								p Собственный департамент моушн-дизайна. Наши графические дизайнеры способны воплотить в реальность любую идею.
+								p Собственный отдел креатива. Наши дизайнеры способны воплотить в реальность любую идею.
 							li
 								h3.work__title
 									img(src="./img/work/work-4.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
 									span Трафик
-								p Собственный отдел профессиональных медиабайеров, работающий по всем направлениям с большими объёмами. Работаем с вертикалями гемблинга, беттинга, нутры и при помощи «Фейсбука», «Гугла» генерируем огромное количество трафика.
+								p Собственный отдел профессиональных медиабайеров, работающий по всем направлениям с большими объёмами. Работаем с вертикалями gambling, betting, nutra и при помощи «Facebook», «Google» генерируем огромное количество трафика.
 			section#jobopenings.jobopenings
 				.jobopenings__container
 					.jobopenings__inner
 						h2.heading.text-center Стань частицей одной большой #[span.heading-line команды!]
-						p.text-center Мы ищем командных игроков с креативностью и видением. Тех, чьё сердце бьётся за инновации и движ в цифровом мире. Если хочешь вместе с нами формировать будущее в iGaming и создавать исключительные продукты в медиабаинговой среде, мы приглашаем присоединиться к нашей команде.
+						p.text-center Мы ищем командных игроков с креативностью и видением. Тех, чьё сердце бьётся за инновации и движ в цифровом мире. Если хочешь вместе с нами формировать будущее в CPA маркетинге и создавать исключительные продукты, мы приглашаем присоединиться к нашей команде.
 						ul.jobopenings__list
 							li Арбитражники
-							li Тимлидерыв CPA-лидогенерации
+							li Тимлидеры
 							li Разработчики
 							li Медиабайеры
 							li Моушн-дизайнеры
