--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -38,7 +38,7 @@ html(lang="en")
 				.about__container
 					.about__inner
 						h2.heading Quantum #[span.heading-line Team]
-						p Медиабаинговая команда с выдающимися показателями, динамичным ростом, мощным финансовым потоком и большой группой экспертов в CPA маркетинге.
+						p Медиабаинговая команда с&nbsp;выдающимися показателями, динамичным ростом, мощным финансовым потоком и&nbsp;большой группой экспертов в&nbsp;CPA-маркетинге.
 						a.about__button.button.button--primary(href="#form") Стать частью команды
 			section#advantages.advantages
 				.advantages__container
@@ -74,7 +74,7 @@ html(lang="en")
 								h3.work__title
 									img(src="./img/work/work-1.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
 									span Фарм-отдел
-								p Большой отдел профессионалов с уверенной экспертизой и аналитикой, которые удовлетворят все потребности по аккаунтам. Тщательно подготавливаем сетапы из аккаунтов «Facebook» для запуска, тестируем и выявляем рабочие.
+								p Большой отдел профессионалов с уверенной экспертизой и аналитикой, которые удовлетворят все потребности по аккаунтам. Тщательно подготавливаем сетапы из аккаунтов Facebook для запуска, тестируем и выявляем рабочие.
 							li
 								h3.work__title
 									img(src="./img/work/work-2.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
@@ -89,12 +89,12 @@ html(lang="en")
 								h3.work__title
 									img(src="./img/work/work-4.jpg", alt="#", aria-hidden="true", width="188", height="120", loading="lazy")
 									span Трафик
-								p Собственный отдел профессиональных медиабайеров, работающий по всем направлениям с большими объёмами. Работаем с вертикалями gambling, betting, nutra и при помощи «Facebook», «Google» генерируем огромное количество трафика.
+								p Собственный отдел профессиональных медиабайеров, работающий по всем направлениям с большими объёмами. Работаем с вертикалями gambling, betting, nutra и при помощи Facebook, Google генерируем огромное количество трафика.
 			section#jobopenings.jobopenings
 				.jobopenings__container
 					.jobopenings__inner
 						h2.heading.text-center Стань частицей одной большой #[span.heading-line команды!]
-						p.text-center Мы ищем командных игроков с креативностью и видением. Тех, чьё сердце бьётся за инновации и движ в цифровом мире. Если хочешь вместе с нами формировать будущее в CPA маркетинге и создавать исключительные продукты, мы приглашаем присоединиться к нашей команде.
+						p.text-center Мы ищем командных игроков с креативностью и видением. Тех, чьё сердце бьётся за инновации и движ в цифровом мире. Если хочешь вместе с нами формировать будущее в CPA-маркетинге и создавать исключительные продукты, мы приглашаем присоединиться к нашей команде.
 						ul.jobopenings__list
 							li Арбитражники
 							li Тимлидеры
@@ -151,7 +151,7 @@ html(lang="en")
 					a.footer__logo.logo(href="#")
 						img(src="./img/logo-footer.svg", alt="logo")
 					.footer__content
-						p © 2023–2026 Quantum Team™
+						p © 2018–<script>document.write((new Date).getFullYear());</script> Quantum Team™
 						a(href="#") Политика конфиденциальности
 						a(href="#") Правовая информация
 		script
